# telegram_group_stats

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  main.py  pyproject.toml  test.py
app/: group_analyzer.py  tdlib_client.py  top_users.py  user_stats.py
app/service/: chat_member_service.py  client.py  functional.py  processor.py
app/service/services/: chat_member_service.py
app/telegram/: client.py  processor.py
tests/: test_client.py  test_processor.py
