[tool.poetry]
name = "telegram-group-stats"
version = "0.1.0"
description = "A tool for analyzing Telegram group statistics."
authors = ["Maxim Kirilyuk <werserk@inbox.ru>"]
readme = "README.md"
homepage = "https://github.com/werserk/telegram_group_stats"

[tool.poetry.dependencies]
python = ">=3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
streamlit = "^1.40.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    build
  | dist
  | \.venv
  | venv
  | td
  | tdlib
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip = ["venv", ".venv", "build", "dist", "td", "tdlib"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["venv", ".venv", "build", "dist", "td", "tdlib", "tests"]
